added state to search

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -2,15 +2,22 @@
     display: flex; 
     padding: 40px;
     flex-direction: column;
+    position: relative;
 }
 
 .welcome {
     display: flex;
     align-self: center;
+    align-items:center;
     font-weight: bold;
     font-size: 29px;
     line-height: 33px;
     background: linear-gradient(1.5deg, #E22A2A 0%, #FCBF49 80.73%);
     -webkit-text-fill-color: transparent;
     background-clip: text;
+}
+
+.home-container .squiggle-friend {
+
+    
 }
